# DesignGenerator

./: .env.example  .gitignore  README.md  package.json  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: agent.ts  collector.ts  health.ts  ingest.ts
apps/api/src/ws/: generation.ts
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/collector/: page.tsx
apps/web/src/app/generator/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/lib/: api.ts
docs/: SETUP_GUIDE.md  USER_GUIDE.md
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: start-all.bat  start-api.bat  start-arbiter.bat  start-collector.bat  start-dev.bat  start-generation.bat  start-ingest.bat  start-web.bat
services/agent/: Dockerfile  pyproject.toml
services/agent/src/: config.py  main.py
services/agent/src/rag/: decomposer.py  graph.py  llm.py  prompt_builder.py  reranker.py
services/agent/src/retrieval/: search.py
services/agent/src/routes/: generation.py  health.py  search.py
services/collector/: pyproject.toml
services/collector/src/: cli.py  config.py  ingest_client.py  job_manager.py  main.py
services/collector/src/datasets/: hf_loader.py
services/collector/src/scrapers/: base.py  behance.py  dribbble.py  pinterest.py  unsplash.py
services/collector/tests/: test_base_scraper.py
services/generation/: Dockerfile  pyproject.toml
services/generation/src/: config.py  main.py
services/generation/src/clients/: fal_client.py  storage.py
services/generation/src/router/: model_router.py
services/generation/src/routes/: generate.py
services/governance/: pyproject.toml
services/gpu_arbiter/: pyproject.toml
services/gpu_arbiter/src/: arbiter.py  config.py  dlq.py  fallback.py  job_queue.py  main.py  watchdog.py
services/gpu_arbiter/src/routes/: health.py  jobs.py
services/ingest/: Dockerfile  pyproject.toml
services/ingest/src/: cache.py  config.py  main.py  qdrant_schema.py
services/ingest/src/embedding/: encoder.py
services/ingest/src/pipeline/: run.py
services/ingest/src/routes/: health.py  ingest.py
