[project]
name = "design-generator-generation"
version = "0.1.0"
description = "Image generation engine: ComfyUI orchestration, ICAS, model routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "Pillow>=11",
    "httpx>=0.28",
    "redis>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "aioboto3>=13",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
local-gpu = [
    "torch>=2.5",
    "diffusers>=0.32",
    "transformers>=4.48",
    "safetensors>=0.5",
    "accelerate>=1.3",
    "websockets>=14",
    "fal-client>=0.5",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
